# grpc_account

./: .gitignore  Cargo.toml  README.md  accounting.proto  build.rs  test
src/: client.rs  db.rs  lib.rs  server.rs  store.rs
src/db/: mod.rs  postgres.rs
src/proto/: accounting.rs  accounting_grpc.rs  mod.rs
src/sql/: database.sql  tables.sql
