[package]
name = "accountant"
version = "0.1.0"
authors = ["Robert L Kelly <robert.l.kelly3@gmail.com>"]
edition = "2018"

[dependencies]
grpcio = { version = "0.4.1", default-features = false, features = ["protobuf-codec"] }
postgres = "0.15.2"
protobuf = "2.0.2"
futures = "0.1.25"
r2d2    = "0.8.3"
r2d2_postgres = "0.14.0"
threadpool = "1.7.0"

[build-dependencies]
protoc-grpcio = "0.3.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
